# HW1

./: CMakeLists.txt  HackEnrollment.c  HackEnrollment.h  IsraeliQueue.c  README.md  main.c  makefile  runTests.sh
newFiles/: HackEnrollment.c  HackEnrollment.h  IsraeliQueue.c  IsraeliQueue.h  Makefile  main.c
tests/Test21/: hackers.txt  students.txt
tests/Test22/: hackers.txt  students.txt
tests/Test24/: courses.txt  explanation.txt  hackers.txt  students.txt  target.txt
tests/Test25/: explanation.txt  queues.txt  target.txt
tests/Test26/: courses.txt  explanation.txt  hackers.txt  queues.txt  students.txt  target.txt
tool/: HackEnrollment.c  HackEnrollment.h  main.c
